--- a/myhpi/templates/base.html
+++ b/myhpi/templates/base.html
@@ -42,25 +42,23 @@
         <ul class="navbar-nav">
             <li class="nav-item"><a class="nav-link" href="{% pageurl root_page %}">Home</a></li>
             {% for page in all_pages %}
-                {% with page|menu_children as menu_children %}
-                    {% if menu_children %}
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                               data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                {{ page.title }}
-                            </a>
-                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                {% for child in menu_children %}
-                                    <a class="dropdown-item" href="{% pageurl child %}">{{ child.title }}</a>
-                                {% endfor %}
-                            </div>
-                        </li>
-                    {% else %}
-                        <li class="nav-item">
-                            <a class="nav-link" href="{% pageurl page %}">{{ page.title }}</a>
-                        </li>
-                    {% endif %}
-                {% endwith %}
+                {% if page.menu_children %}
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            {{ page.title }}
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            {% for child in page.menu_children %}
+                                <a class="dropdown-item" href="{% pageurl child %}">{{ child.title }}</a>
+                            {% endfor %}
+                        </div>
+                    </li>
+                {% else %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% pageurl page %}">{{ page.title }}</a>
+                    </li>
+                {% endif %}
             {% endfor %}
         </ul>
     </div>
