--- a/myhpi/templates/menu_level.html
+++ b/myhpi/templates/menu_level.html
@@ -8,7 +8,7 @@
     {% if level > 0 %}
     <div id="nav-item-container-{{ page_id }}"
         class="nav-item-container collapse"
-        aria-labelledby="nav-item-{{ page.id }}"
+        aria-labelledby="nav-item-{{ page_id }}"
         data-bs-parent=".nav-level-{{ level }}">
         {% else %}
         <div id="nav-item-container-{{ page_id }}"
